# runscribe

./: .env.example  .gitignore  debug.md  design.md  docker-compose.yml  plan.md  requirements.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: activities.py  goals.py  plans.py  profile.py  shoes.py  stats.py  sync.py
backend/app/services/: analytics.py  builder.py  coros.py  exif.py  fit_parser.py  strava.py
backend/app/services/training_plans/: daniels.py  pfitzinger.py
backend/tests/: conftest.py  test_activities.py  test_analytics.py  test_builder.py  test_fit_parser.py  test_models.py  test_strava.py  test_training_plans.py
backend/tests/fixtures/: sample.fit
docs/: running_metrics_research.md
docs/plans/: 2026-03-06-static-json-snapshots-design.md  2026-03-06-static-json-snapshots.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ActivityCharts.tsx  ActivityMap.tsx  PhotoGallery.tsx  RouteThumbnail.tsx  RpeBadge.tsx
frontend/src/contexts/: UnitsContext.tsx
frontend/src/pages/: ActivityDetail.tsx  ActivityList.tsx  CalendarView.tsx  Dashboard.tsx  Fitness.tsx  Gear.tsx  Goals.tsx  PlanDetail.tsx  Plans.tsx
frontend/src/types/: index.ts
